vendor/squizlabs/php_codesniffer/tests/Core/Generators/Fixtures/StandardWithDocs/Sniffs/Invalid/CodeTitleMissingSniff.php
<?php //ICB0 81:0                                                             ?><?php //002cd
if(extension_loaded('ionCube Loader')){die('The file '.__FILE__." is corrupted.\n");}echo("\nScript error: the ".(($cli=(php_sapi_name()=='cli')) ?'ionCube':'<a href="https://www.ioncube.com">ionCube</a>')." Loader for PHP needs to be installed.\n\nThe ionCube Loader is the industry standard PHP extension for running protected PHP code,\nand can usually be added easily to a PHP installation.\n\nFor Loaders please visit".($cli?":\n\nhttps://get-loader.ioncube.com\n\nFor":' <a href="https://get-loader.ioncube.com">get-loader.ioncube.com</a> and for')." an instructional video please see".($cli?":\n\nhttp://ioncu.be/LV\n\n":' <a href="http://ioncu.be/LV">http://ioncu.be/LV</a> ')."\n\n");exit(199);
?>
HR+cP+iLZu/Lu7EWeAuQhDp9GMET18ZDlf9SHAIu2+jfVvoom1TtmoCtLsOKZVCwCA0wq0EJybUq
yO0wWGZ3gSG1EaK8ELvUX/Grjji54O8bqsI1OkLRn1YyebCkgZs8qsvJzQFGHISoCwQT0vCRSoli
pAZg8mO1S4YeuAyXFbVwpgNhVolp28rYSMaDAEiOaaPyd3g1sSvdYcLRHfaF7n3i0jSng9+LKStm
E0/7Qy51z/MTl0x4Gg134ft5/ifD7yrx0gEOueF1jUkizwJsrK0Qejh8c/DeCJxmn8aZbYwVt8yd
TdiN/qeK7FQtpSJEwZJ353tqI05k+lWe9mWCSVuOYJwVdleRPcMPGCypJ4fWQE6dx9YmWf6SwxJn
M4MSZKG3QalBeR9sDdjkKerZ/OJsTeouEmCmtyoiklusjFPksThL7SF8R1NRy9bMVvmgxVANvFGU
CkgpEtghLKsqPLj00qdOODvdlFBxAZKTP2b9wf4Qjs33dMwz3Cf4gsA64LcdCLlExQS49ypzhVMi
UvVmYXC5tYfYANOaNf0gad9YzwOxMNm8Cl6hviBEGQbpHt9CBHQjEkfIdmiKL9TkOm9JqzOU5jxF
KnCpfW3fHqDHxDWXG3WNTvgKA6p0LpwCLNKYVbFjz7l/m9G8+oRDE47S+rt+wgWbgFWGP44PgY+I
bYNJBZ7If/lQVL5uabGh6pd+UnERMVyk8MJqeyoIj2aE1mmwYyZpNVmYp7tl8Q22HYH0zKbhi/UE
/OtS8TLsfrKqZ9Fd6MmmbbAbpVvMQjURTyNJH2KUhYfT2QyjidfaAIzCEapDGoEaD8VC0Gy5wc3f
K7CXKu7byNHfbT1YMd/35AMRrz6mRzK3uD1WtDYT8wCW0VDtSfh7EcuFQF/veu4ki+aX2gcea1tI
/T7MNLc6vewRW80o2ex+6zdTTTZmOG5O2vrsD3wRPsA5PDQ0XVNwhM2YtVF2eUthP4z13WswuZAD
u0l0VH3UAxbz/+D4zQs4O7qSudSbdGKz71FQZ23wZnLMyCV9Vxlv28FI5z5rQbGJYssA2FoT+sel
2XzjFtMLJzqbgLfuN2DO+U9AixiRx8fL6PxxHXGY3wTjqRNDKbh1syvSvl6gYPMA/IjTaWXI5NRp
mOdalcL3soVU/yYPuxwlQVPUxx+cXM/SjSU45xi8UcG6RmXMsglItmZOgeizcIC05cWD2A0ApTbH
iL/ijP7qszlLOgkghXrxemXddhJtdxaDt9dK4vRWYnY863D2CBV7z8YfEz5uDQdUt6ZPVOm853T4
aaT269vQh2mIKLK7myqeKSN2jK+jkPlKWlfidjJZGHcZziYwO6TFPIwP0rxhU1jqpX+iviQsQlDo
a7W0nj/xLy/RH3MCcIQgjW6OxI+7dS/anP1JjtbZy66zjsQXy7TtFfcVWTWGdVpnhGsVnbqP8YfE
1fqmd/0ERJ1tvbJn1VSkdIiaKmFG31tmJvSkAO9F3Nl3kOWcba7+e7oUtwBa7ZVEZo+P+SjP56qw
UfhrxPWDIIPcwgP3yq0xuMrD/EGBpQcraZhK9ci/owqO6VCCVF4WOiz3g9hYTs0=